# rust_service_template

./: Cargo.toml  Config.yaml  Dockerfile  README.md  cargo-generate.toml
.github/workflows/: build.yml
settings/: default.toml
src/: api.rs  lib.rs  main.rs  routes.rs  server.rs  settings.rs  setup.rs  state.rs
src/api/: health.rs
src/setup/: settings.rs  telemetry.rs
src/state/: http_client.rs
tests/: helpers.rs  main.rs
