[package]
name = "{{crate_name}}"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13", default-features = false, features = ["toml"] }
eyre = "0.6"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11", features = ["tokio"] }
thiserror = "1"
tokio = { version = "1.22", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
axum = "0.6"
axum-tracing-opentelemetry = "0.5"
hyper = { version = "0.14", features = ["full"] }
reqwest = "0.11"
reqwest-middleware = "0.2.0"
reqwest-tracing = { version = "0.4.0", features = ["opentelemetry_0_18"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wiremock = "0.5"
